# hasql-notifications

./: .travis.yml  LICENSE  README.md  hasql-notifications.cabal  stack.yaml
src/Hasql/: Notification.hs
test/: Spec.hs
test/Hasql/: NotificationSpec.hs
