name:                hasql-notifications
version:             0.1.0.0
synopsis:            Support for PostgreSQL notifications in hasql
description:         Please see README.md
homepage:            https://github.com/cocreature/hasql-notifications#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           2016
category:            Unknown
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
tested-with: GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Hasql.Notification
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , hasql >= 0.19.14 && < 0.20
                     , mtl >= 2.2 && < 2.3
                     , postgresql-libpq >= 0.9 && < 0.10
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite hasql-notifications-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring
                     , hasql
                     , hasql-notifications
                     , hspec
                     , postgres-tmp >= 0.1 && < 0.2
                     , postgresql-libpq
                     , postgresql-simple
                     , text >= 1.2 && < 1.3
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cocreature/hasql-notifications
